# DORA

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/dora/defs/: assets.py  resources.py
src/dora/defs/circleci/: assets.py  ops.py  utils.py
src/dora/defs/github/: assets.py
