[project]
name = "dora"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.9",
    "dagster-duckdb>=0.27.9",
    "dagster-postgres>=0.27.9",
    "pandas>=2.3.2",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dora"
registry_modules = [
    "dora.components.*",
]


